--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '{your-pixel-id-goes-here}');
+  fbq('init', '1329103209007064');
   fbq('track', 'PageView');
 </script>
 <noscript>
